myblog/static/src/scss/style.scss
/* ... */
.previous_page,
.next_page {
    display: inline-flex;
    vertical-align: bottom;
}

.next_page {
    float: right;
    padding-left: 2vh;
}

article {
    position: relative;
    .mainPostImg {
        width: 100%;
        min-height: 500px;
    }
    img {
        width: 100%;
    }
}

.img_area {
    padding-bottom: 66.6%;
}
.placeholder {
  background-color: #f6f6f6;
  background-size: cover;
  background-repeat: no-repeat;
  position: relative;
  overflow: hidden;
}
.placeholder img {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  transition: opacity 1s linear;
}

.placeholder img._loaded {
  opacity: 1;
}

.img-small {
  filter: blur(50px);
  /* this is needed so Safari keeps sharp edges */
  transform: scale(1);
}

.post_title {
    margin: $page_margin 0;
}

.post_title .date {
    margin: $page_margin/2 0;
    float: right;
    font-size: 0.9rem;
}

.error_msg {
    margin-top: 25vh;
    text-align: center;
    h1 {
        font-size: 3rem;
        color: $dark-gray;
    }
}

/* Smartphones (portrait and landscape) ----------- */
/* blog list */
@media screen 
and (min-width : 320px) 
and (max-width : 480px) {
#main_lst {
    margin: 0 !important;
}
.blog_ele {
    padding: 3vh 0;
    max-height: 24vh;
    .btn_read {
        display: none;
    }
    header {
        width: 65%;
        h2, h3 {
            width: 90%;
        }
    }
    footer {
        position: relative;
        padding: $mobile_page_margin / 2 0;
        bottom: 0;
        position: absolute;
    }
    picture {
        width: 35%;
        height: 24vh;
    }
    img {
        height: 100%;
        width: 100%;
    }
}
}

/* blog detail */
@media screen 
and (min-width : 320px) 
and (max-width : 480px) {
.btn_back {
    margin-left: -1vh;
}
.btn_expand {
    display: none;
}
article {
    padding-top: 1vh;
img {
    width: 100%;
    height: 30vh;
}
}
article, .disqus {
    padding-left: 0;
    padding-right: 0;
    margin: 0;
}

#pagination {
    h2 {
        font-size: 1.2em;
    }
}
.post_title {
    margin: $mobile_page_margin 0;
}
.snb_left {
    display: none;
}
.disqus {
    padding: 0;
}
.pagination_col {
    padding: $mobile_page_margin 0;
}
.btn_gototop {
    bottom: $mobile_page_margin - 1vh;
    right: $mobile_page_margin - 1vh;
}
.next_page {
    padding: 0;
}
}

